  'scrollback' are not reflown.
• The |terminal| now supports OSC 8 escape sequences and will display
  hyperlinks in supporting host terminals.

TREESITTER

• |LanguageTree:node_for_range()| gets anonymous and named nodes for a range
• |vim.treesitter.get_node()| now takes an option `include_anonymous`, default
  false, which allows it to return anonymous nodes as well as named nodes.

TUI

• The builtin UI declares info |nvim_set_client_info()| on its channel. See
  |startup-tui|. To see the current UI info, try this: >
    :lua =vim.api.nvim_get_chan_info(vim.api.nvim_list_uis()[1].chan)
• |log| messages written by the builtin UI client (TUI, |--remote-ui|) are
  now prefixed with "ui" instead of "?".
• The TUI will re-query the terminal's background color when a theme update
  notification is received and Nvim will update 'background' accordingly.

UI

• |vim.ui.open()| (by default bound to |gx|) accepts an `opt.cmd` parameter
  which controls the tool used to open the given path or URL. If you want to
  globally set this, you can override vim.ui.open using the same approach
  described at |vim.paste()|.
- `vim.ui.open()` now supports
  [lemonade](https://github.com/lemonade-command/lemonade) as an option for
  opening urls/files. This is handy if you are in an ssh connection and use
  `lemonade`.
• The |ins-completion-menu| now supports cascading highlight styles.
  |hl-PmenuSel| and |hl-PmenuMatch| both inherit from |hl-Pmenu|, and
  |hl-PmenuMatchSel| inherits highlights from both |hl-PmenuSel| and
  |hl-PmenuMatch|.
• |vim.diagnostic.setqflist()| updates existing diagnostics quickfix list if one
  exists.

• |ui-messages| content chunks now also contain the highlight group ID.

==============================================================================
CHANGED FEATURES                                                 *news-changed*

These existing features changed their behavior.

• 'scrollbind' now works properly with buffers that contain virtual lines.
